; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_richole.c_set_textfont_propd.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_richole.c_set_textfont_propd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@S_OK = common dso_local global i32 0, align 4
@E_INVALIDARG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @set_textfont_propd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_textfont_propd(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_3__, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %34 [
    i32 128, label %11
    i32 130, label %13
    i32 129, label %28
    i32 131, label %28
  ]

11:                                               ; preds = %3
  %12 = load i32, i32* @S_OK, align 4
  store i32 %12, i32* %4, align 4
  br label %36

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @get_textfont_propl(i32* %14, i32 %15, i32* %9)
  %17 = load i32, i32* %9, align 4
  %18 = icmp eq i32 %17, 131
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  store i32 129, i32* %7, align 4
  br label %27

20:                                               ; preds = %13
  %21 = load i32, i32* %9, align 4
  %22 = icmp eq i32 %21, 129
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i32 131, i32* %7, align 4
  br label %26

24:                                               ; preds = %20
  %25 = load i32, i32* @E_INVALIDARG, align 4
  store i32 %25, i32* %4, align 4
  br label %36

26:                                               ; preds = %23
  br label %27

27:                                               ; preds = %26, %19
  br label %28

28:                                               ; preds = %3, %3, %27
  %29 = load i32, i32* %7, align 4
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  store i32 %29, i32* %30, align 4
  %31 = load i32*, i32** %5, align 8
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @set_textfont_prop(i32* %31, i32 %32, %struct.TYPE_3__* %8)
  store i32 %33, i32* %4, align 4
  br label %36

34:                                               ; preds = %3
  %35 = load i32, i32* @E_INVALIDARG, align 4
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %34, %28, %24, %11
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @get_textfont_propl(i32*, i32, i32*) #1

declare dso_local i32 @set_textfont_prop(i32*, i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
